--- a/assets/modul/map-module.css
+++ b/assets/modul/map-module.css
@@ -6,7 +6,6 @@
     width: 100%;
 }
 
-/* ОБЯЗАТЕЛЬНО: убираем ограничения контейнера */
 .map-section .container {
     max-width: none !important;
     padding: 0 !important;
@@ -106,11 +105,11 @@
 
 /* Стили для кастомной метки места встречи */
 .custom-placemark {
-    width: 60px;
-    height: 60px;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
     background: linear-gradient(135deg, var(--primary), var(--secondary));
-    border: 4px solid white;
+    border: 1px solid white;
     box-shadow: 
         0 0 0 8px rgba(106, 17, 203, 0.3),
         0 0 30px rgba(106, 17, 203, 0.6);
@@ -128,7 +127,7 @@
 }
 
 .custom-placemark::after {
-    content: '🎬';
+    content: '';
     position: absolute;
     top: 50%;
     left: 50%;
